# desk_vision

./: Cargo.toml  Desk Vision.txt  README.md
.github/: FUNDING.yml
src/: agents.rs  app.rs  app_state.rs  components.rs  config.rs  enums.rs  lib.rs  main.rs  ollama_state.rs  tools.rs  utils.rs
src/agents/: chat.rs  chat.rs.bak  images.rs  web_scrape.rs
src/components/: agents_panel.rs  bottom_panel.rs  chat_input.rs  file_loader.rs  labels.rs  main_panel.rs  messages.rs  ollama_settings.rs  top_menu.rs  top_panel.rs
